--- a/src/Style/style.scss
+++ b/src/Style/style.scss
@@ -1,5 +1,31 @@
+html {
+  border: 2px solid blue;
+}
+
 body {
-  background-color: #ED02A7;
+  font-size: 62.5%;
+  margin: auto;
+  background-color: #ff91de;
   height: 95vh;
-  color: #F016AE;
+}
+
+.introduction {
+  text-align: center;
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-family: 'Goldman', cursive;
+}
+
+.selection{
+  padding-top: 3%;
+  text-align: center;
+  font-size: 2rem;
+}
+
+.copyright {
+  position:fixed; 
+  width:98.7%; 
+  height:16px; 
+  bottom:3%;
+  text-align: center;
 }
