Fixed some formatting stuff

--- a/src/Style/style.scss
+++ b/src/Style/style.scss
@@ -1,9 +1,10 @@
 html {
-  border: 2px solid blue;
+  height: 100%;
+  font-size: 62.5%;
 }
 
 body {
-  font-size: 62.5%;
+  font-size: 137%;
   margin: auto;
   background-color: #ff91de;
   height: 95vh;
@@ -13,19 +14,19 @@ body {
   text-align: center;
   font-size: 3rem;
   text-transform: uppercase;
-  font-family: 'Goldman', cursive;
+  font-family: "Goldman", cursive;
 }
 
-.selection{
+.selection {
   padding-top: 3%;
   text-align: center;
   font-size: 2rem;
 }
 
 .copyright {
-  position:fixed; 
-  width:98.7%; 
-  height:16px; 
-  bottom:3%;
+  position: absolute;
+  width: 98.7%;
+  height: 16px;
+  bottom: 0%;
   text-align: center;
 }
