--- a/src/Style/style.scss
+++ b/src/Style/style.scss
@@ -17,7 +17,7 @@ body {
   font-family: "Goldman", cursive;
 }
 
-.selection {
+#container {
   padding-top: 3%;
   text-align: center;
   font-size: 2rem;
